--- a/app/src/main/res/layout/count_complete_dialog.xml
+++ b/app/src/main/res/layout/count_complete_dialog.xml
@@ -5,7 +5,21 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/main_subColor">
+        android:background="@color/white">
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/font_main"
+            android:padding="10dp"
+            android:text="@string/angryDegree"
+            android:textColor="@color/main_color"
+            android:textSize="20sp"
+            android:background="@color/main_subColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -18,103 +32,114 @@
             android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/textView18">
 
-        <LinearLayout
-            android:id="@+id/linearLayout3"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+            <LinearLayout
+                android:id="@+id/linearLayout3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1"
-                android:contentDescription="@string/angryIconDescription"
-                android:src="@drawable/icon_angry1"
-                tools:ignore="NestedWeights" />
+                android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:contentDescription="@string/angryIconDescription"
-                android:src="@drawable/icon_angry2" />
+                <ImageView
+                    android:id="@+id/dialog_angry1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="15dp"
+                    android:contentDescription="@string/angryIconDescription"
+                    android:src="@drawable/icon_angry1"
+                    tools:ignore="NestedWeights" />
 
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:contentDescription="@string/angryIconDescription"
-                android:src="@drawable/icon_angry3" />
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/dialog_angry2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="15dp"
+                    android:contentDescription="@string/angryIconDescription"
+                    android:src="@drawable/icon_angry2" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout7"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:fontFamily="@font/font_main"
-                android:gravity="center"
-                android:text="흥분"
-                android:textColor="@color/gray"
-                android:textSize="20sp"
-                tools:ignore="NestedWeights" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:fontFamily="@font/font_main"
-                android:gravity="center"
-                android:text="조금 화남"
-                android:textColor="@color/angry_2"
-                android:textSize="20sp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:fontFamily="@font/font_main"
-                android:gravity="center"
-                android:text="화남"
-                android:textColor="@color/angry_3"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout8"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:contentDescription="@string/angryIconDescription"
-                android:src="@drawable/icon_angry4" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:contentDescription="@string/angryIconDescription"
-                android:src="@drawable/icon_angry5" />
+                <ImageView
+                    android:id="@+id/dialog_angry3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="15dp"
+                    android:contentDescription="@string/angryIconDescription"
+                    android:src="@drawable/icon_angry3" />
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/font_main"
+                    android:gravity="center"
+                    android:text="@string/angryDegree1"
+                    android:textColor="@color/gray"
+                    android:textSize="20sp"
+                    tools:ignore="NestedWeights" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/font_main"
+                    android:gravity="center"
+                    android:text="@string/angryDegree2"
+                    android:textColor="@color/angry_2"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/font_main"
+                    android:gravity="center"
+                    android:text="@string/angryDegree3"
+                    android:textColor="@color/angry_3"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
+
+                <ImageView
+                    android:id="@+id/dialog_angry4"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="15dp"
+                    android:contentDescription="@string/angryIconDescription"
+                    android:src="@drawable/icon_angry4" />
+
+                <ImageView
+                    android:id="@+id/dialog_angry5"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="15dp"
+                    android:contentDescription="@string/angryIconDescription"
+                    android:src="@drawable/icon_angry5" />
+            </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/linearLayout9"
                 android:layout_width="match_parent"
@@ -130,7 +155,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/font_main"
                     android:gravity="center"
-                    android:text="매우 화남"
+                    android:text="@string/angryDegree4"
                     android:textColor="@color/angry_4"
                     android:textSize="20sp" />
 
@@ -140,12 +165,63 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/font_main"
                     android:gravity="center"
-                    android:text="격노"
+                    android:text="@string/angryDegree5"
                     android:textColor="@color/angry_5"
                     android:textSize="20sp" />
             </LinearLayout>
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/font_main"
+            android:padding="15dp"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="@string/countDiaryWriteQuestion"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toStartOf="@+id/count_write_radio"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+        <RadioButton
+            android:id="@+id/count_write_radio"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:checked="false"
+            android:padding="5dp"
+            android:buttonTint="@color/main_color"
+            app:layout_constraintBottom_toBottomOf="@+id/textView17"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView17" />
+
+        <Button
+            android:id="@+id/count_dialog_confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:backgroundTint="@color/main_subColor"
+            android:fontFamily="@font/font_main"
+            android:textSize="20sp"
+            android:text="@string/confirm"
+            android:textColor="@color/main_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView17" />
+
+        <Button
+            android:id="@+id/count_dialog_replay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/main_subColor"
+            android:fontFamily="@font/font_main"
+            android:layout_marginEnd="20dp"
+            android:text="@string/replayCount"
+            android:textColor="@color/main_color"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/count_dialog_confirm"
+            app:layout_constraintTop_toBottomOf="@+id/count_write_radio" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
