--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,8 @@
         <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="NumberPickerStyle">
+        <item name="android:textSize">25sp</item>
+        <item name="android:editTextColor">@color/main_color</item>
+    </style>
 </resources>
