--- a/app/src/main/res/layout/diary_recycler_item.xml
+++ b/app/src/main/res/layout/diary_recycler_item.xml
@@ -9,7 +9,7 @@
         android:background="@drawable/layout_radius">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/diary_item_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/angryIconDescription"
@@ -24,19 +24,18 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:fontFamily="@font/font_main"
-            android:text="2022년 10월 21일"
             android:textColor="@color/black"
             android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintBottom_toBottomOf="@+id/diary_item_icon"
+            app:layout_constraintStart_toEndOf="@+id/diary_item_icon"
+            app:layout_constraintTop_toTopOf="@+id/diary_item_icon"
             app:layout_constraintVertical_bias="0.3" />
 
         <TextView
+            android:id="@+id/diary_item_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/font_main"
-            android:text="월"
             android:textColor="@color/main_color"
             android:textSize="15sp"
             android:layout_marginStart="10dp"
@@ -45,14 +44,14 @@
             app:layout_constraintTop_toTopOf="@+id/diary_item_date" />
 
         <TextView
+            android:id="@+id/diary_item_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/font_main"
             android:layout_marginStart="5dp"
             android:textSize="13sp"
-            android:text="오전 03 : 33"
             android:textColor="@color/gray"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/diary_item_icon"
             app:layout_constraintTop_toBottomOf="@+id/diary_item_date" />
 
         <TextView
@@ -64,13 +63,12 @@
             android:textColor="@color/black"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
-            android:paddingBottom="10dp"
+            android:paddingBottom="15dp"
             android:textSize="15sp"
             android:gravity="top"
-            android:text="일기의 내용이 들어갈 공간"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/diary_item_icon" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
